--- a/ChatClient/MainWindow.xaml
+++ b/ChatClient/MainWindow.xaml
@@ -4,65 +4,71 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:ChatClient"
-        xmlns:vm="clr-namespace:ChatClient.ViewModels"
+        xmlns:viewModels="clr-namespace:ChatClient.ViewModels"
+        xmlns:views="clr-namespace:ChatClient.Views"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800"
-        d:DataContext="{d:DesignInstance vm:ChatViewModel}">
+        Title="MainWindow" Height="450" Width="800">
 
-    <!--<Window.DataContext>
-        <vm:ChatViewModel/>
-    </Window.DataContext>-->
+    <ContentControl Content="{Binding CurrentViewModel}">
+        <ContentControl.Resources>
+            <DataTemplate DataType="{x:Type viewModels:LoginViewModel}">
+                <views:LoginView/>
+            </DataTemplate>
+            <DataTemplate DataType="{x:Type viewModels:RegisterViewModel}">
+                <views:RegisterView/>
+            </DataTemplate>
+        </ContentControl.Resources>
+    </ContentControl>
+    
+    <!--<Frame Source="/ChatClient;component/Pages/LoginPage.xaml"
+           NavigationUIVisibility="Hidden"/>-->
+
+    <!--<Window.Resources>
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="Resources/TextBlock.xaml"/>
+                <ResourceDictionary Source="Resources/TextBox.xaml"/>
+                <ResourceDictionary Source="Resources/Button.xaml"/>
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
+    </Window.Resources>
+
     <Grid>
-        <StackPanel HorizontalAlignment="Center"
-                    VerticalAlignment="Center">
-            <TextBlock Margin="0 20 0 0"
-            HorizontalAlignment="Center"
-            Foreground="DarkRed"
-            Text="{Binding ErrorMessage}">
-                <TextBlock.Style>
-                    <Style TargetType="TextBlock">
-                        <Style.Triggers>
-                            <DataTrigger Binding="{Binding HasErrorMessage}" Value="False">
-                                <Setter Property="Visibility" Value="Collapsed" />
-                            </DataTrigger>
-                        </Style.Triggers>
-                    </Style>
-                </TextBlock.Style>
-            </TextBlock>
-            <TextBox Width="240"
-                 Height="60"
-                     Margin="5"
-                     Text="{Binding Message}"/>
-            <Button Width="120"
-                Height="60"
-                    Margin="5"
-                    Content="Send"
-                    FontSize="24"
-                    Command="{Binding SendChatMessageCommand}"/>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition/>
+            <ColumnDefinition Width="2.5*"/>
+            <ColumnDefinition/>
+        </Grid.ColumnDefinitions>
 
-            <ListView Margin="0 20 0 0"
-                BorderThickness="0"
-                ItemsSource="{Binding Messages}"
-                ScrollViewer.HorizontalScrollBarVisibility="Disabled">
-                <ListView.ItemContainerStyle>
-                    <Style TargetType="ListViewItem">
-                        <Setter Property="Template">
-                            <Setter.Value>
-                                <ControlTemplate TargetType="ListViewItem">
-                                    <ContentPresenter />
-                                </ControlTemplate>
-                            </Setter.Value>
-                        </Setter>
-                    </Style>
-                </ListView.ItemContainerStyle>
-                <ListView.ItemsPanel>
-                    <ItemsPanelTemplate>
-                        <WrapPanel />
-                    </ItemsPanelTemplate>
-                </ListView.ItemsPanel>
-             
-            </ListView>
-        </StackPanel>
-        
-    </Grid>
+        <Grid Grid.Column="1">
+            <Grid.RowDefinitions>
+                <RowDefinition/>
+                <RowDefinition/>
+                <RowDefinition Height="3.5*"/>
+                <RowDefinition/>
+            </Grid.RowDefinitions>
+
+            <TextBlock Grid.Row="1"
+                       Style="{StaticResource errorMessage}"
+                       Text="{Binding ErrorMessage}"/>
+
+            <ListBox Grid.Row="2" 
+                     Margin="0,20,0,0"
+                     ItemsSource="{Binding Messages}"/>
+
+            <Grid Grid.Row="3" >
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="5*"/>
+                    <ColumnDefinition/>
+                </Grid.ColumnDefinitions>
+
+                <TextBox Grid.Column="0"
+                     Style="{StaticResource typeMessage}"
+                     Text="{Binding Message}"/>
+                <Button Grid.Column="1"
+                        Style="{StaticResource sendMessage}"
+                        Command="{Binding SendChatMessageCommand}"/>
+            </Grid>
+        </Grid>
+    </Grid>-->
 </Window>
