--- a/ChatClient/MainWindow.xaml
+++ b/ChatClient/MainWindow.xaml
@@ -17,6 +17,9 @@
             <DataTemplate DataType="{x:Type viewModels:RegisterViewModel}">
                 <views:RegisterView/>
             </DataTemplate>
+            <DataTemplate DataType="{x:Type viewModels:ChatViewModel}">
+                <views:ChatView/>
+            </DataTemplate>
         </ContentControl.Resources>
     </ContentControl>
     
