--- a/ChatClient/Resources/TextBlock.xaml
+++ b/ChatClient/Resources/TextBlock.xaml
@@ -11,5 +11,16 @@
             </DataTrigger>
         </Style.Triggers>
     </Style>
-    
+
+    <Style x:Key="connectionStatus" TargetType="{x:Type TextBlock}">
+        <Setter Property="Foreground" Value="Blue"/>
+        <Setter Property="HorizontalAlignment" Value="Center"/>
+        <Setter Property="VerticalAlignment" Value="Center"/>
+        <!--<Style.Triggers>
+            <DataTrigger Binding="{Binding HasErrorMessage}" Value="False">
+                <Setter Property="Visibility" Value="Collapsed"/>
+            </DataTrigger>
+        </Style.Triggers>-->
+    </Style>
+
 </ResourceDictionary>
