--- a/ChatClient/Views/LoginView.xaml
+++ b/ChatClient/Views/LoginView.xaml
@@ -29,6 +29,8 @@
             <TextBlock Style="{StaticResource errorMessage}"
                        Text="{Binding ErrorMessage}"
                        Margin="10"/>
+            <TextBlock Style="{StaticResource connectionStatus}"
+                       Text="{Binding ConnectionStatus}"/>
 
 
         </StackPanel>
