--- a/ChatClient/Views/LoginView.xaml
+++ b/ChatClient/Views/LoginView.xaml
@@ -5,6 +5,7 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:ChatClient.Views"
       xmlns:vm="clr-namespace:ChatClient.ViewModels"
+      xmlns:converters="clr-namespace:ChatClient.Converters"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800">
 
@@ -13,6 +14,7 @@
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="../Resources/TextBlock.xaml"/>
             </ResourceDictionary.MergedDictionaries>
+            <converters:StatusMessageConverter x:Key="statusMessageConverter"/>
         </ResourceDictionary>
     </UserControl.Resources>
 
@@ -30,7 +32,7 @@
                        Text="{Binding ErrorMessage}"
                        Margin="10"/>
             <TextBlock Style="{StaticResource connectionStatus}"
-                       Text="{Binding ConnectionStatus}"/>
+                       Text="{Binding ConnectionStatusValue, Converter={StaticResource statusMessageConverter}}"/>
 
 
         </StackPanel>
