--- a/ChatClient/App.xaml
+++ b/ChatClient/App.xaml
@@ -4,6 +4,14 @@
              xmlns:local="clr-namespace:ChatClient"
              >
     <Application.Resources>
-         
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="Resources/TextBlock.xaml"/>
+                <ResourceDictionary Source="Resources/TextBox.xaml"/>
+                <ResourceDictionary Source="Resources/Button.xaml"/>
+                <ResourceDictionary Source="Resources/ListBox.xaml"/>
+                <ResourceDictionary Source="Resources/Grid.xaml"/>
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
     </Application.Resources>
 </Application>
