--- a/ChatClient/Views/ChatView.xaml
+++ b/ChatClient/Views/ChatView.xaml
@@ -7,46 +7,86 @@
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
 
-    <Grid>
+    <Grid Background="#C0C8D5">
         <Grid.ColumnDefinitions>
             <ColumnDefinition/>
             <ColumnDefinition Width="2.5*"/>
             <ColumnDefinition/>
         </Grid.ColumnDefinitions>
 
-        <Grid Grid.Column="1">
-            <Grid.RowDefinitions>
-                <RowDefinition/>
-                <RowDefinition/>
-                <RowDefinition Height="3.5*"/>
-                <RowDefinition/>
-            </Grid.RowDefinitions>
 
-            <TextBlock Grid.Row="1"
+        <Border Grid.ColumnSpan="2"
+                BorderBrush="Green"
+                BorderThickness="0,0,0,0"
+                CornerRadius="5">
+            <Grid Grid.ColumnSpan="2">
+                <Grid.RowDefinitions>
+                    <RowDefinition/>
+                    <RowDefinition/>
+                    <RowDefinition Height="3.5*"/>
+                    <RowDefinition/>
+                </Grid.RowDefinitions>
+
+                <!--<TextBlock Grid.Row="0"
                        Style="{StaticResource errorMessage}"
-                       Text="{Binding ErrorMessage}"/>
+                       Text="{Binding ErrorMessage}"/>-->
 
-            <ListBox Grid.Row="2" 
-                     Margin="5,20,5,5"
+                <Border BorderBrush="#7B828E"
+                    BorderThickness="1,1,0.5,1"
+                        CornerRadius="5,0,0,5">
+                    <Grid Grid.Row="0" Grid.ColumnSpan="2">
+                        <TextBlock Grid.Row="0" Grid.ColumnSpan="2"
+                       Text="Chat"
+                       Margin="10"
+                       FontSize="40"
+                           TextAlignment="Center"
+                       VerticalAlignment="Center"/>
+                    </Grid>
+                </Border>
+
+
+
+                <ListBox Grid.Row="1" Grid.RowSpan="2" 
+
                      ItemsSource="{Binding Messages}"/>
 
-            <Grid Grid.Row="3" >
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="5*"/>
-                    <ColumnDefinition/>
-                </Grid.ColumnDefinitions>
+                <Grid Grid.Row="3" >
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="5*"/>
+                        <ColumnDefinition/>
+                    </Grid.ColumnDefinitions>
 
-                <TextBox Grid.Column="0"
+                    <TextBox Grid.Column="0"
                      Style="{StaticResource typeMessage}"
                      Text="{Binding Message}"/>
-                <Button Grid.Column="1"
+                    <Button Grid.Column="1"
                         Style="{StaticResource sendMessage}"
                         Command="{Binding SendChatMessageCommand}"/>
+                </Grid>
             </Grid>
+        </Border>
+        
+
+        <Grid  Grid.Column="2">
+            <Grid.RowDefinitions>
+                <RowDefinition />
+                <RowDefinition Height="5.5*"/>
+            </Grid.RowDefinitions>
+            
+            <Border BorderThickness="0.5,1,1,1"
+                    BorderBrush="#7B828E"
+                    CornerRadius="0,5,5,0">
+                <TextBlock Grid.Row="0"
+                       Text="Users"
+                       FontSize="40"
+                       TextAlignment="Center"
+                       VerticalAlignment="Center"/>
+            </Border>
+            
+            <ListBox Grid.Row="1"  Style="{StaticResource activeUsers}"/>
         </Grid>
+        
 
-        <ListBox Grid.Column="2" Style="{StaticResource activeUsers}"/>
-
-        <Grid Grid.ColumnSpan="3" Style="{StaticResource getBannedLayout}" Background="Black"/>
+        <Grid Grid.ColumnSpan="3" Style="{StaticResource getBannedLayout}"/>
     </Grid>
 </UserControl>
