--- a/ChatClient/Resources/TextBox.xaml
+++ b/ChatClient/Resources/TextBox.xaml
@@ -27,32 +27,37 @@
             <Setter.Value>
                 <ControlTemplate>
                     <DockPanel LastChildFill="True">
-                        <Border DockPanel.Dock="Right" CornerRadius="30" 
-                                Background="Red" 
-                                BorderThickness="1"
-                                Width="20"
-                                Height="20">
+                        <Border>
+                            <Border.Style>
+                                <Style TargetType="{x:Type Border}">
+                                    <Setter Property="DockPanel.Dock" Value="Right"/>
+                                    <Setter Property="CornerRadius" Value="30"/>
+                                    <Setter Property="Background" Value="Red"/>
+                                    <Setter Property="BorderThickness" Value="1"/>
+                                    <Setter Property="Width" Value="20"/>
+                                    <Setter Property="Height" Value="20"/>
+                                    <Style.Triggers>
+                                        <Trigger  Property="IsMouseOver" Value="True">
+                                            <Setter Property="ToolTip" Value="{Binding ElementName=adorner, 
+                                            Path=AdornedElement.(Validation.Errors)[0].ErrorContent}"/>
+                                        </Trigger>
+                                    </Style.Triggers>
+                                </Style>
+                            </Border.Style>
                             <TextBlock Text="!" 
                                        TextAlignment="Center"
                                        Foreground="White"
                                        FontSize="18"
                                        VerticalAlignment="Center"
-                                       HorizontalAlignment="Center"/>
-                            </Border>
+                                       HorizontalAlignment="Center">
+                            </TextBlock>
+                        </Border>
                         <Border BorderBrush="DarkRed" BorderThickness="1" CornerRadius="5">
-                            <AdornedElementPlaceholder/>
+                            <AdornedElementPlaceholder x:Name="adorner"/>
                         </Border>
                     </DockPanel>
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
-        
-        <Style.Triggers>
-            <Trigger Property="Validation.HasError" Value="true">
-                <Setter Property="ToolTip"
-                Value="{Binding RelativeSource={RelativeSource Self}, 
-                       Path=(Validation.Errors)[0].ErrorContent}"/>
-            </Trigger>
-        </Style.Triggers>
     </Style>
 </ResourceDictionary>
