--- a/ChatClient/Resources/TextBox.xaml
+++ b/ChatClient/Resources/TextBox.xaml
@@ -10,8 +10,10 @@
     <Style x:Key="enterField" TargetType="{x:Type TextBox}">
         <Setter Property="FontSize" Value="22"/>
         <Setter Property="Margin" Value="10"/>
+        <Setter Property="Width" Value="220"/>
         <Setter Property="BorderThickness" Value="0"/>
         <Setter Property="Background" Value="#E5E7E9"/>
+        <Setter Property="HorizontalAlignment" Value="Left"/>
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type TextBox}">
