--- a/ChatClient/Views/AdditionalViews/BindablePasswordBox.xaml
+++ b/ChatClient/Views/AdditionalViews/BindablePasswordBox.xaml
@@ -6,5 +6,8 @@
              xmlns:local="clr-namespace:ChatClient.Views.AdditionalViews"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
-    <PasswordBox x:Name="passwordBox" PasswordChanged="PasswordBox_PasswordChanged"/>
+
+    <PasswordBox x:Name="passwordBox" 
+                 PasswordChanged="PasswordBox_PasswordChanged">
+    </PasswordBox>
 </UserControl>
