--- a/ChatClient/Views/AdditionalViews/BindablePasswordBoxConfirm.xaml
+++ b/ChatClient/Views/AdditionalViews/BindablePasswordBoxConfirm.xaml
@@ -6,5 +6,7 @@
              xmlns:local="clr-namespace:ChatClient.Views.AdditionalViews"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
-    <PasswordBox x:Name="passwordBoxConfirm" PasswordChanged="PasswordBoxConfirm_PasswordChanged"/>
+    <PasswordBox x:Name="passwordBoxConfirm" 
+                 PasswordChanged="PasswordBoxConfirm_PasswordChanged"
+/>
 </UserControl>
